--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: nheo <nheo@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/19 14:24:40 by nheo              #+#    #+#              #
-#    Updated: 2022/08/19 18:09:46 by nheo             ###   ########.fr        #
+#    Updated: 2022/08/19 20:30:57 by heonamjun        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
